<resources>
    <string name="app_name">PNUGuide</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset_nickname">Reset Nickname</string>
    <string name="watch_video">Watch Video</string>
    <string name="collect_stamp">Collect Stamp</string>
    <string name="get_directions">길 찾기</string>
    <string name="start_point">출발지</string>
    <string name="destination">도착지</string>
    <string name="open_in_google_maps">Google Maps로 이동</string>
    <string name="my_location">현재 위치</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_or_sign_up">Log in or sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_email">New Email</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="pnu_guide">PNU Guide</string>
    <string name="pnu_guide_update">PNU Guide Update</string>
    <string name="title_course">Course</string>
    <string name="title_stamp">Stamp</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_popular">Popular</string>
    <string name="title_history">History</string>
    <string name="title_study">Study</string>
    <string name="title_quiz">Quiz</string>
    <string name="action_camera">Camera</string>
    <string name="action_quiz">Quiz</string>
    <string name="hint_search_map">Search location</string>
    <string name="download_map">캠퍼스 가이드 다운로드</string>
    <string name="view_favorites">인기코스 미리보기</string>
    <string name="tour_apply">캠퍼스 투어 신청</string>
    <string name="open_youtube">부산대학교 공식 유투브</string>
    <string name="stamp_capture">사진으로 인증하기</string>
    <string name="stamp_failed">인증에 실패했습니다</string>
    <string name="send">Send</string>
    <string name="hint_message">Type a message</string>
    <string name="stamp_label_detected">인식된 스팟: %1$s</string>
    <string name="app_info">App Info</string>
    <string name="readme_url">https://github.com/SonJH7/PNUGuide/blob/main/README.md</string>
</resources>